Connecting House With CSS to Homework

--- a/homework/house_assignment with css/css/style.css
+++ b/homework/house_assignment with css/css/style.css
@@ -14,11 +14,11 @@ a:link {
 }
 
 a:hover{
-    color:darkred
+    color:mediumvioletred
 }
 
-a:visited{
-    color:darkred
+audio{
+    align-items: center;
 }
 /*
 this is a comment.
